tests/fixtures/invalid/pow_str_str.py
# Cannot call pow() with Str, Str
x = pow("hello", "hello")
